syntax = "proto3";

package nimbus;

option go_package = "github.com/learningfun-dev/NimbusGRPC/nimbus/proto";


message EventRequest {
    string event_name = 1;
    int32 number = 2;
}

message EventResponse {
    string event_name = 1;
    int32 number = 2;
    int32 result = 3;
}

message KafkaEventReqest {
    string event_name = 1;
    int32 number = 2;
    string client_id= 3;
    string redis_channel=4;
}

message KafkaEventResponse {
    string event_name = 1;
    int32 number = 2;
    int32 result = 3;
    string client_id= 4;
    string redis_channel=5;
    int64 kafka_offset = 6;
}

service NimbusService{
    rpc  ProcessEvent (stream EventRequest) returns (stream EventResponse);
}
